--- a/exercise_01_changing_pacts/01.md
+++ b/exercise_01_changing_pacts/01.md
@@ -12,18 +12,20 @@ Let's add a new field to the expectations we have for the product API. We're goi
 
     :arrow_right: Note that in the `publish.pact.js` file, the consumer version is tagged with the name of the git branch.
 
-1. Open up the the consumer build in [Travis CI][travis-ci]. It will generate and publish the pact successfully, then fail on the can-i-deploy step, as there is no successful verification from the provider.
+1. Open up the the consumer build in [Travis CI][travis-ci]. It will generate and publish the pact successfully, then fail on the `can-i-deploy` step, as there is no successful verification from the provider.
 
-1. Next, open up the provider build in Travis CI. The changed pact will have triggered a pact verification build of the provider project. This will have failed, as the new field does not exist in the API. This particular failed build is not necessarily a problem, as the pact verification build is generally separate from the provider's normal pipeline. For a more detailed explanation of this see https://github.com/pactflow/example-provider#pact-verifications.
+1. Open up the provider build in Travis CI. The changed pact will have triggered a pact verification build of the provider project. This will have failed, as the new field does not exist in the API. This particular failed build is expected, and not a problem, as the pact verification build is generally separate from the provider's normal pipeline. For a more detailed explanation of this see https://github.com/pactflow/example-provider#pact-verifications.
 
 ### Run the provider build
 
-The real problem is that publishing the pact from master breaks the provider's main pipeline, as the consumer versions are tagged with the name of the branch (master) and the provider is configured to verify pacts tagged with 'master'.
+The real problem is that the provider is now unable to deploy from their master branch :anguished:.
 
-You can demonstrate that this breaks the provider's main build by running a provider build in Travis by selecting "More options" > "Trigger build" > "Trigger custom build".
+This is because the provider is configured to verify the latest `master` pact, so publishing a pact with a new expectation and tagging its consumer version as `master` causes the verification step to fail, breaking the provider's build through no fault of its own.
+
+You can demonstrate this by running a provider build in Travis by selecting "More options" > "Trigger build" > "Trigger custom build".
 
 ### Conclusion
 
-Making changes to the pact on the master branch can break both consumer and provider builds, and may stop both projects from being able to deploy.
+Making changes to the pact for the on the master branch can break both consumer and provider builds, and may stop both projects from being able to deploy.
 
 [travis-ci]: https://travis-ci.com
