--- a/exercise_01_changing_pacts/02.md
+++ b/exercise_01_changing_pacts/02.md
@@ -4,7 +4,7 @@ Those familiar with automated testing frameworks have probably come across the t
 
 When using Pact with Pactflow, we have a similar concept of a "pending pact". A pending pact is one which does not yet have a successful verification result published. Pending pacts can fail verification without causing the overall verification task (and hence, the overall provider build) to fail.
 
-Once a pact has a successful verification result published, it is now considered to be an accepted/supported contract, any any subsequent failure can only be as a result of the provider itself changing. Once a pact has left pending state, verification failures *will* cause the provider build to fail.
+Once a pact has a successful verification result published, it is now considered to be an accepted/supported contract, and any subsequent failure can only be as a result of the provider itself changing. Once a pact has left pending state, verification failures *will* cause the provider build to fail.
 
 For further reading: http://blog.pact.io/2020/02/24/how-we-have-fixed-the-biggest-problem-with-the-pact-workflow/
 
@@ -27,7 +27,9 @@ Let's see what happens if the provider makes a change that would break its contr
 
 1. Run `make test` - note that this now fails :x:
 
-A developer would typically run all the tests before pushing, so this change would most likely never even make it into the codebase. However, even if they did push this change, the build would fail and stop before it got to the deployment stage, ensuring that the production consumer could not be broken by an unintentional deployment of this version of the provider.
+  A developer would typically run all the tests before pushing, so this change would most likely never even make it into the codebase. However, even if they did push this change, the build would fail and stop before it got to the deployment stage, ensuring that the production consumer could not be broken by an unintentional deployment of this version of the provider.
+
+1. Discard your changes.
 
 ### Conclusion
 
