--- a/exercise_01_changing_pacts/03.md
+++ b/exercise_01_changing_pacts/03.md
@@ -24,34 +24,9 @@ Let's make our changes on a branch this time.
 1. Make sure the tests pass locally by running `make test`.
 
 1. Push your changes by running `git push --set-upstream origin feat/new-field`.
-    * The consumer build will still fail - but this time, it won't block the project from being deployed, as we made the changes on a branch.
+    * The consumer build will pass, as we don't deploy from non-master branches, so `can-i-deploy` won't run.
     * The webhook-triggered pact verification build will still fail - that's ok, as it doesn't stop the provider from deploying.
 
-Why does making the changes on a branch stop the provider build from failing?
-
-In the [publish.pact.js](https://github.com/pactflow/example-consumer/blob/master/publish.pact.js) file in the consumer project, we have tagged the consumer version with the name of the branch.
-
-```js
-
-const branch = process.env.TRAVIS_BRANCH;
-const opts = {
-  ...,
-  tags: [branch]
-};
-```
-
-In the [product.pact.test.js](https://github.com/pactflow/example-provider/blob/master/product/product.pact.test.js) file in the provider project, we have configured the verification task to fetch the pacts that belong to the latest consumer versions with `master` and `prod` tags (more on the prod part later).
-
-```js
-
-const fetchPactsDynamicallyOpts = {
-  provider: "pactflow-example-provider",
-  consumerVersionTag: ['master', 'prod'],
-  ...
-}
-```
-
-By tagging with the name of the branch, and changing the pact on a feature branch, we keep both the consumer and provider builds green.
 
 ### Conclusion
 
